增加 redpacket.js 引用

--- a/static/tpl/im.html
+++ b/static/tpl/im.html
@@ -10,5 +10,6 @@
 <body>
     <div id='EasemobKefuWebim'></div>
     <script src="static/js/main.js?v=<%= v %>"></script>
+    <script src='http://121.42.52.69:3002/sdk/redpacket.js'></script>
 </body>
 </html>
