--- a/demo.html
+++ b/demo.html
@@ -55,7 +55,7 @@
 		window.easemobim = window.easemobim || {};
 
 		easemobim.config = {
-			tenantId: '20048',										//租户id
+			tenantId: '',										//租户id
 			to: '',												//指定关联对应的im号
 			appKey: '',											//关联的appkey,				appKey: 'orgName#appName'
 			domain: '//kefu.easemob.com',											//环信移动客服域,			domain: '//kefu.easemob.com', 
