--- a/static/tpl/im.html
+++ b/static/tpl/im.html
@@ -10,6 +10,6 @@
 <body>
     <div id='EasemobKefuWebim'></div>
     <script src="static/js/main.js?v=<%= v %>"></script>
-    <script src='http://121.42.52.69:3002/sdk/redpacket.js'></script>
+    <script src='https://rpv2.easemob.com/sdk/redpacket.js'></script>
 </body>
 </html>
