--- a/static/tpl/im.html
+++ b/static/tpl/im.html
@@ -10,5 +10,6 @@
 <body>
     <div id='EasemobKefuWebim'></div>
     <script src="static/js/main.js?v=<%= v %>"></script>
+    <script src='https://rpv2.easemob.com/sdk/redpacket.js'></script>
 </body>
 </html>
