--- a/demo.html
+++ b/demo.html
@@ -63,7 +63,7 @@
 			staticPath: '',										//访客插件static的路径,		staticPath: '//XXX/webim/static'
 			xmppServer: '',										//环信IM服务器,				xmppServer: 'im-api.easemob.com'
 			restServer: '',										//环信REST服务器,			restServer: 'a1.easemob.com'
-			visitor: '',										//访客信息
+			visitor: '123456',										//访客信息
 			agentName: '',										//指定坐席
 			ticket: true,										//是否展示留言入口
             
